--- a/assets/index.html
+++ b/assets/index.html
@@ -8,7 +8,7 @@
     <!-- font awesome cdnjs -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css">
     <!--  -->
-    <title>Variety of Foods</title>
+    <title>Variety of Foodss</title>
 </head>
 <body>
     <div class="container">
