--- a/assets/index.html
+++ b/assets/index.html
@@ -4,11 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles/style.scss">
+    <link rel="stylesheet" href="styles/section1/section1.css">
+    <link rel="stylesheet" href="styles/section2/section2.css">
+    <link rel="stylesheet" href="styles/section3/section3.css">
+    <link rel="stylesheet" href="styles/section4/section4.css">
     <!-- font awesome cdnjs -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css">
     <!--  -->
-    <title>Variety of Foodss</title>
+    <title>Variety of Foods</title>
 </head>
 <body>
     <div class="container">
@@ -18,7 +21,7 @@
                 Variety of Foods
             </h1>
             <div class="section-1-icons">
-                <i class="fas fa-egg"></i>
+                <i class="fas fa-egg change"></i>
                 <i class="fas fa-stroopwafel"></i>
                 <i class="fas fa-cheese"></i>
                 <i class="fas fa-hotdog"></i>
@@ -27,11 +30,96 @@
                 <i class="fas fa-ice-cream"></i>
                 <i class="fas fa-fish"></i>
                 <i class="fas fa-cookie"></i>
-                <i class="fas fa-egg"></i>
+                <i class="fas fa-seedling"></i>
             </div>
         </section>
         <!-- End Section 1 -->
+
+        <!-- Section 2 -->
+
+        <section class="section-2">
+            <h1 class="section-heading">Popular Meal</h1>
+                <div class="cards-container">
+                    <div class="card">
+                        <img src="images/card-img-1.png" class="card-img">
+                        <h3 class="card-name">Fish</h3>
+                        <button class="card-btn">Order Now</button>
+                    </div>
+
+                    <div class="card">
+                        <img src="images/card-img-2.png" class="card-img">
+                        <h3 class="card-name">Cake</h3>
+                        <button class="card-btn">Order Now</button>
+                    </div>
+
+                    <div class="card">
+                        <img src="images/card-img-3.png" class="card-img">
+                        <h3 class="card-name">Lobster</h3>
+                        <button class="card-btn">Order Now</button>
+                    </div>
+                </div>
+        </section>
+
+        <!-- End Section 2 -->
+
+        <!-- Section 3 -->
+
+        <section class="section-3">
+            <h1 class="section-heading">Galery</h1>
+            <div class="gallery">
+                <a href="#" class="gallery-link" title="Order Now">
+                    <img src="images/gallery-img-1.jpg" class="food-img">
+                    <h3 class="food-name">Pancakes</h3>
+                    <p class="food-description">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cupiditate ipsam perferendis assumenda, repellendus tempore voluptate!</p>
+                </a>
+                <a href="#" class="gallery-link" title="Order Now">
+                    <img src="images/gallery-img-2.jpg" class="food-img">
+                    <h3 class="food-name">Cupcakes</h3>
+                    <p class="food-description">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cupiditate ipsam perferendis assumenda, repellendus tempore voluptate!</p>
+                </a>
+                <a href="#" class="gallery-link" title="Order Now">
+                    <img src="images/gallery-img-3.jpg" class="food-img">
+                    <h3 class="food-name">Hummus</h3>
+                    <p class="food-description">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cupiditate ipsam perferendis assumenda, repellendus tempore voluptate!</p>
+                </a>
+                <a href="#" class="gallery-link" title="Order Now">
+                    <img src="images/gallery-img-4.jpg" class="food-img">
+                    <h3 class="food-name">Hamburguers</h3>
+                    <p class="food-description">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cupiditate ipsam perferendis assumenda, repellendus tempore voluptate!</p>
+                </a>
+                <a href="#" class="gallery-link" title="Order Now">
+                    <img src="images/gallery-img-5.jpg" class="food-img">
+                    <h3 class="food-name">Salmon</h3>
+                    <p class="food-description">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cupiditate ipsam perferendis assumenda, repellendus tempore voluptate!</p>
+                </a>
+                <a href="#" class="gallery-link" title="Order Now">
+                    <img src="images/gallery-img-6.jpg" class="food-img">
+                    <h3 class="food-name">Vegetable</h3>
+                    <p class="food-description">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cupiditate ipsam perferendis assumenda, repellendus tempore voluptate!</p>
+                </a>
+            </div>
+            
+        </section> 
+
+        <!-- End Section 3 -->
+
+        <!-- Section 4 -->
+
+        <section class="section-4">
+            <div class="section-4-text">
+                <h2 class="section-4-heading">Sing Me Up</h2>
+                <p class="section-4-paragraph">Be the first to know about new products</p>
+            </div>
+            <form class="singup-form">
+                <input type="email" placeholder="Enter Your Email" >
+                <button type="submit" class="singnup-form-btn"><i class="fas fa-arrow-right"></i></button>
+            </form>
+            <p class="copyright">CodeAndCreat &copy; All Rights Reserved</p>
+        </section>
+
+        <!-- End Section 4 -->
+
     </div>
-    
+    <script src="scripts/script.js"></script>
 </body>
 </html>
