--- a/assets/index.html
+++ b/assets/index.html
@@ -110,9 +110,9 @@
                 <h2 class="section-4-heading">Sing Me Up</h2>
                 <p class="section-4-paragraph">Be the first to know about new products</p>
             </div>
-            <form class="singup-form">
+            <form class="signup-form">
                 <input type="email" placeholder="Enter Your Email" >
-                <button type="submit" class="singnup-form-btn"><i class="fas fa-arrow-right"></i></button>
+                <button type="submit" class="signup-form-btn"><i class="fas fa-arrow-right"></i></button>
             </form>
             <p class="copyright">CodeAndCreat &copy; All Rights Reserved</p>
         </section>
