--- a/assets/index.html
+++ b/assets/index.html
@@ -14,6 +14,28 @@
     <title>Variety of Foods</title>
 </head>
 <body>
+    <nav class="navbar">
+        <a href="#" class="navbar-link">
+            <i class="fas fa-home"></i>
+            <span>Home</span>
+        </a>
+        <a href="#" class="navbar-link">
+            <i class="fas fa-utensils"></i>
+            <span>Meals</span>
+        </a>
+        <a href="#" class="navbar-link">
+            <i class="fas fa-hamburger"></i>
+            <span>Burguer</span>
+        </a>
+        <a href="#" class="navbar-link">
+            <i class="fas fa-pizza-slice"></i>
+            <span>Pizza</span>
+        </a>
+        <a href="#" class="navbar-link">
+            <i class="fas fa-blender-phone"></i>
+            <span>Contact</span>
+        </a>
+    </nav>
     <div class="container">
         <!-- Section 1 -->
         <section class="section-1">
