--- a/assets/index.html
+++ b/assets/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles/config/config.css">
+    <link rel="stylesheet" href="styles/navbar/navbar.css">
     <link rel="stylesheet" href="styles/section1/section1.css">
     <link rel="stylesheet" href="styles/section2/section2.css">
     <link rel="stylesheet" href="styles/section3/section3.css">
@@ -14,7 +16,8 @@
     <title>Variety of Foods</title>
 </head>
 <body>
-    <nav class="navbar">
+    <!-- Navbar -->
+    <!-- <nav class="navbar">
         <a href="#" class="navbar-link">
             <i class="fas fa-home"></i>
             <span>Home</span>
@@ -36,6 +39,9 @@
             <span>Contact</span>
         </a>
     </nav>
+    <div class="menu"></div> -->
+    <!-- End of Navbar -->
+
     <div class="container">
         <!-- Section 1 -->
         <section class="section-1">
