--- a/index.html
+++ b/index.html
@@ -4,42 +4,34 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles/config/config.css">
-    <link rel="stylesheet" href="styles/navbar/navbar.css">
-    <link rel="stylesheet" href="styles/section1/section1.css">
-    <link rel="stylesheet" href="styles/section2/section2.css">
-    <link rel="stylesheet" href="styles/section3/section3.css">
-    <link rel="stylesheet" href="styles/section4/section4.css">
-    <!-- font awesome cdnjs -->
+    <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css">
-    <!--  -->
     <title>Variety of Foods</title>
 </head>
 <body>
     <!-- Navbar -->
-    <!-- <nav class="navbar">
+    <nav class="navbar">
         <a href="#" class="navbar-link">
             <i class="fas fa-home"></i>
             <span>Home</span>
         </a>
-        <a href="#" class="navbar-link">
+        <a href="#meal" class="navbar-link">
             <i class="fas fa-utensils"></i>
             <span>Meals</span>
         </a>
-        <a href="#" class="navbar-link">
+        <a href="#galery" class="navbar-link">
             <i class="fas fa-hamburger"></i>
             <span>Burguer</span>
         </a>
-        <a href="#" class="navbar-link">
+        <a href="#galery" class="navbar-link">
             <i class="fas fa-pizza-slice"></i>
             <span>Pizza</span>
         </a>
-        <a href="#" class="navbar-link">
+        <a href="#contact" class="navbar-link">
             <i class="fas fa-blender-phone"></i>
             <span>Contact</span>
         </a>
     </nav>
-    <div class="menu"></div> -->
     <!-- End of Navbar -->
 
     <div class="container">
@@ -64,8 +56,7 @@
         <!-- End Section 1 -->
 
         <!-- Section 2 -->
-
-        <section class="section-2">
+        <section class="section-2" id="meal">
             <h1 class="section-heading">Popular Meal</h1>
                 <div class="cards-container">
                     <div class="card">
@@ -87,12 +78,10 @@
                     </div>
                 </div>
         </section>
-
         <!-- End Section 2 -->
 
         <!-- Section 3 -->
-
-        <section class="section-3">
+        <section class="section-3" id="galery">
             <h1 class="section-heading">Galery</h1>
             <div class="gallery">
                 <a href="#" class="gallery-link" title="Order Now">
@@ -128,12 +117,10 @@
             </div>
             
         </section> 
-
         <!-- End Section 3 -->
 
         <!-- Section 4 -->
-
-        <section class="section-4">
+        <section class="section-4" id="contact">
             <div class="section-4-text">
                 <h2 class="section-4-heading">Sing Me Up</h2>
                 <p class="section-4-paragraph">Be the first to know about new products</p>
@@ -144,7 +131,6 @@
             </form>
             <p class="copyright">CodeAndCreat &copy; All Rights Reserved</p>
         </section>
-
         <!-- End Section 4 -->
 
     </div>
