--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                 <input type="email" placeholder="Enter Your Email" >
                 <button type="submit" class="signup-form-btn"><i class="fas fa-arrow-right"></i></button>
             </form>
-            <p class="copyright">CodeAndCreat &copy; All Rights Reserved</p>
+            <p class="copyright">VarietyOfFoods &copy; All Rights Reserved</p>
         </section>
         <!-- End Section 4 -->
 
